--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </head>
 <body>
     
- <section class="page1">
+ <section class="page1" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 content11 px-0">
@@ -48,7 +48,7 @@
  </section>
 
 
- <section class="page2">
+ <section class="page2" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-10 content3 mx-auto">
@@ -59,7 +59,7 @@
     </div>
  </section>
 
- <section class="page3">
+ <section class="page3" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 px-0">
@@ -84,7 +84,7 @@
     </div>
  </section>
 
- <section class="page4">
+ <section class="page4" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 content5 px-0">
@@ -94,7 +94,7 @@
     </div>
  </section>
 
- <section class="page5">
+ <section class="page5" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-10 content6 px-0 mx-auto">
@@ -121,7 +121,7 @@
  </section>
 
 
- <section class="page6">
+ <section class="page6" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-10 content6 px-0 mx-auto">
@@ -148,7 +148,7 @@
  </section>
 
 
- <section class="page7">
+ <section class="page7" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-10 content6 px-0 mx-auto">
@@ -175,7 +175,7 @@
  </section>
 
 
- <section class="page8">
+ <section class="page8" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-10 content6 px-0 mx-auto">
@@ -202,7 +202,7 @@
  </section>
 
 
- <section class="page9">
+ <section class="page9" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 content8 px-0">
@@ -212,7 +212,7 @@
     </div>
  </section>
 
- <section class="page10">
+ <section class="page10" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row mx-auto">
             <div class="col-10 content9 px-0 mx-auto pb-5">
@@ -223,7 +223,7 @@
     </div>
  </section>
 
- <section class="page11">
+ <section class="page11" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row mx-auto">
             <div class="col-10 content9 px-0 mx-auto my-5">
@@ -234,7 +234,7 @@
     </div>
  </section>
 
- <section class="page12">
+ <section class="page12" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 content10 px-0 my-5">
@@ -257,7 +257,7 @@
  </section>
 
 
- <section class="page13">
+ <section class="page13" style="background-color: #E9E8EF;">
     <div class="container-fluid">
         <div class="row">
             <div class="col-10 mx-auto my-5">
